@@ -1,4 +1,7 @@
 2019-12-23 Magnus Hagdorn
+ * piccolo3/client/PiccoloSpectrometer.py: fix spelling and minor bug fix
+
+2019-12-23 Magnus Hagdorn
  * piccolo3/client/PiccoloSpectrometer.py: only ask server for new current
    time every 10 seconds otherwise use cached value
 
